CMAKE_MINIMUM_REQUIRED (VERSION 3.12.0)
SET(PROJECT_NAME main)
#项目名称
PROJECT(${PROJECT_NAME})
#采用C++14标准
SET(CMAKE_CXX_STANDARD 14)
#默认编译Rlease
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
#ADD_COMPILE_OPTIONS(-fPIC)

SET(CMAKE_BUILD_TYPE "Debug")
# 条件判断
if(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g -ggdb")
    message("Debug mode:${CMAKE_C_FLAGS_DEBUG}")
elseif(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS}")
    message("Release mode:${CMAKE_C_FLAGS_RELEASE}")
else()
    message("else:${CMAKE_BUILD_TYPE}")
    message("else:${CMAKE_C_FLAGS_RELEASE}")
endif()


SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
#生成的文件路径
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
#.cpp 文件放这
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRC)
#头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#需要链接的库文件目录
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

FILE(GLOB_RECURSE HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.*)
#生成执行程序
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRC})
#执行程序链接的库
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
